# diplomat-gate

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: ISSUES_TO_CREATE.md  PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES_v0.3.0.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  smoke.yml
benchmarks/: README.md  run.py
demos/openclaw/: README.md  policies.yaml  run.py  storyboard.md  transcript.md
demos/openclaw/assets/: recording_script.sh
docs/: adapters.md  audit-trail.md  cli.md  conversion-checklist.md  quickstart.md  review-queue.md  writing-policies.md
docs/images/: README.md  generate_before_after.py  generate_multi_framework.py
examples/: 01_basic_gate.py  02_yaml_config.py  03_decorator.py  04_audit_trail.py  05_review_queue.py  06_openai_adapter.py  07_anthropic_adapter.py  08_langchain_adapter.py  09_validate_in_ci.py  README.md  email_agent.py  stripe_agent.py
examples/configs/: gate.yaml
scripts/: validate_release.py
src/diplomat_gate/: __init__.py  audit.py  cli.py  decorator.py  engine.py  exceptions.py  models.py  review.py  state.py  validation.py
src/diplomat_gate/adapters/: __init__.py  anthropic.py  base.py  langchain.py  openai.py
src/diplomat_gate/policies/: __init__.py  base.py  emails.py  loader.py  payments.py
tests/: test_adapters.py  test_audit.py  test_cli_validate.py  test_decorator.py  test_email_policies.py  test_engine.py  test_examples.py  test_integration.py  test_loader.py  test_models.py  test_payment_policies.py  test_release_readiness.py  test_review.py  test_state.py  test_validation.py
tests/fixtures/validation/: error_audit_bad_type.yaml  error_bad_on_fail.yaml  error_bad_severity.yaml  error_missing_id.yaml  error_type_mismatch.yaml  error_unknown_policy.yaml  malformed_yaml.yaml  policies_key_form.yaml  valid_full.yaml  valid_minimal.yaml  warn_default_critical_field.yaml  warn_empty_domain.yaml  warn_no_policies.yaml  warn_unknown_field.yaml
